test/files/neg/t7519.check
t7519.scala:5: error: type mismatch;
 found   : 0.type (with underlying type Int)
 required: String
    locally(0 : String) // was: "value conversion is not a member of C.this.C"
            ^
t7519.scala:15: error: type mismatch;
 found   : 0.type (with underlying type Int)
 required: String
      locally(0 : String) // was: "value conversion is not a member of U"
              ^
two errors found
